@@ -1,4 +1,4 @@
-package hybristools;
+package hybris.ant;
 
 import java.io.File;
 import java.io.IOException;
@@ -6,7 +6,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.function.BiConsumer;
 
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.IProgressMonitor;
@@ -20,27 +19,27 @@ import org.eclipse.debug.core.model.RuntimeProcess;
 import org.eclipse.debug.core.sourcelookup.ISourceLookupDirector;
 import org.eclipse.debug.internal.ui.views.console.ProcessConsoleManager;
 import org.eclipse.jdt.internal.launching.JavaSourceLookupDirector;
-import org.eclipse.jdt.launching.IJavaLaunchConfigurationConstants;
 
-public class AntCommand implements BiConsumer<File, IProgressMonitor> {
-
+public class AntCommand {
     private static final Map<String, Integer> estimatedWork = new HashMap<>();
     private static ProcessConsoleManager consoleManager = new ProcessConsoleManager();
 
     private final IPath platformPath;
     private final List<String> commands;
+    private final String[] attrNameAndValues;
 
-    public AntCommand(IPath platforPath, List<String> commands) {
+    public AntCommand(IPath platforPath, List<String> commands, String... attrNameAndValues) {
         this.platformPath = platforPath;
         this.commands = commands;
+        this.attrNameAndValues = attrNameAndValues;
     }
 
-    @Override
-    public void accept(File ext, IProgressMonitor monitor) {
+    @SuppressWarnings({ "restriction", "unused" })
+    public int accept(File ext, IProgressMonitor monitor) {
         try {
             List<String> processCommands = new ArrayList<>();
-            IPath path = platformPath.makeAbsolute().append("/apache-ant-1.9.1/bin/ant.bat");
-            processCommands.add(path.toOSString());
+            IPath path = platformPath.append("/apache-ant-1.9.1/bin/ant.bat").makeAbsolute();
+            processCommands.add(path.toFile().getAbsolutePath());
             processCommands.addAll(commands);
             final String commandName = path.lastSegment() + ' ' + String.join(" ", commands);
             int estimated = estimatedWork.getOrDefault(commandName, 100);
@@ -51,15 +50,28 @@ public class AntCommand implements BiConsumer<File, IProgressMonitor> {
                     .getSourcePathComputer("org.eclipse.jdt.launching.sourceLookup.javaSourcePathComputer"));
             ILaunch launch = new Launch(null, ILaunchManager.DEBUG_MODE, sourceLocator);
 
-            Process antProccess = new ProcessBuilder(processCommands).directory(ext).start();
+            final List<String> envsList = new ArrayList<>();
+            System.getenv().forEach((k, v) -> {
+                envsList.add(k + '=' + v);
+            });
+
+            Process antProccess = Runtime.getRuntime().exec(processCommands.toArray(new String[processCommands.size()]),
+                    envsList.toArray(new String[envsList.size()]),
+                    ext);
             IProcess procc = new RuntimeProcess(launch, antProccess, commandName, null);
-            procc.setAttribute(IProcess.ATTR_PROCESS_TYPE, IJavaLaunchConfigurationConstants.ID_JAVA_PROCESS_TYPE);
+            for (int i = 0; i < attrNameAndValues.length; i = i + 2) {
+                procc.setAttribute(attrNameAndValues[i], attrNameAndValues[i + 1]);
+            }
             consoleManager.launchAdded(launch);
+            int result = antProccess.waitFor();
             subMonitor.done();
+            consoleManager.launchRemoved(launch);
+            return result;
         } catch (IOException e) {
             e.printStackTrace();
         } catch (Exception e) {
         }
+        return -1;
     }
 
 }
